# emumadz

./: .gitignore  .readthedocs.yaml  CITATION.cff  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  MANIFEST.in  README.md  meta.yaml  pyproject.toml  setup.py
data/: chrom_table.tsv  chromosomes.txt  chromosomes_only.txt  sample_map.tsv  samplesheet.220701_A01221_0125_BHCCHNDMXY.tsv  samplesheet.220930_A00692_316_AHVMJFDSX3.tsv  samplesheet.221014_A00692_0319_BHGJ7CDMXY.tsv  samplesheet.231201_A00692_0394_231208_A00692_0396.tsv  samplesheet.F0-F2.tsv  samplesheet.F2-F2.20260123.tsv  samplesheet.tmp  samplesheet_new.tsv  samplesheet_original.tsv  samplesheet_postprocess.tsv
docs/: api.rst  appendix_internal_ref_only.rst  case_study_1.rst  case_study_2.rst  case_study_3.rst  conf.py  important_information.rst  index.rst  install.rst  intro.rst  quickstart.rst  visualisation_module.rst
emumadz/: generate_report_json.py  parse_vcf.py  plot_homozygosity.py  rename_bam_chroms.sh
nextflow/: emumadz_pipeline.nf  nextflow.config  test_containers.nf
paper/: paper.bib  paper.md
source/: 1.extract_filepaths.sh  2.validate_samplesheet.py  3.setup_dataset.sh  4.1.make_gvcfs.sh  4.run_gatk.sh  4.run_gatk.slurm  api.rst  appendix_internal_ref_only.rst  appendix_main.rst  case_study_1.rst  case_study_2.rst  conf.py  important_information.rst  index.rst  install.rst  internal_ref_only.rst  intro.rst  make_icon.py  parse_vcf.py  plot_homozygosity.py  postprocess.rst  quickstart.rst  requirements.txt  setup_filepaths.sh  validate_samplesheet.py
test/: test_dp.vcf.gz.tbi  (+2 more)
(+21 files in other folders)
