[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "emumadz"
version = "1.0.0"
requires-python = ">=3.9"
keywords = ["genome", "genomic", "genomics", "variant calling", "snps", "zebrafish"]
authors = [
    {name = "Tyrone Chen", email = "tyrone.chen@petermac.org"}
]
maintainers = [
    {name = "Tyrone Chen", email = "tyrone.chen@petermac.org"}
]
classifiers = [
    "Development Status :: 4 - Beta",

    # Indicate who your project is intended for
    "Intended Audience :: Developers :: Users :: Bioinformaticians :: Computational Biologists :: Biologists",
    "Topic :: Pipeline :: Bioinformatics :: Biology :: Computational Biology",

    # Pick your license as you wish
    "License :: OSI Approved :: MIT License",    

    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.scripts]
parse_vcf = "emumadz.parse_vcf:main"
plot_homozygosity = "emumadz.plot_homozygosity:main"

[tool.setuptools]
packages = ["emumadz"]

[project.urls]  # Optional
"Homepage" = "https://github.com/hogan-lab/emumadz"
"Bug Reports" = "https://github.com/hogan-lab/emumadz/issues"
"Source" = "https://github.com/hogan-lab/emumadz"
